[package]
name = "sensehat-stick"
description = "A Rust library for the Raspberry Pi Sense HAT Joystick."
version = "0.1.0"
authors = ["Joaquin Rosales <globojorro@gmail.com>"]
keywords = ["sensehat", "hardware", "joystick", "raspberry-pi", "evdev"]
categories = ["hardware-support", "asynchronous"]
homepage = "https://github.com/saibatizoku/sensehat-stick-rs"
repository = "https://github.com/saibatizoku/sensehat-stick-rs"
readme = "README.md"
license = "MIT"

[features]
default = ["linux-evdev", "poll"]
linux-evdev = ["evdev"]
poll = ["mio"]

[dependencies]
evdev = { version = "0.10", optional = true }
failure = "0.1"
glob = "0.2"
mio = { version = "0.6", optional = true }
